package creational.factory_method.pizza;

public enum PizzaType {
  HAI_SAN,MAM;
}
